objects/GEMS_ReportingMilestone_Tracking__c.object
<CustomObject>
    <description>Tracking table for GEMS Reporting Milestone on Submission cases</description>
    <fields>
        <fullName>Check_Dental_Coding__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check Dental Coding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Medical_Coding__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check Medical Coding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Rx_Coding__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check Rx Coding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Setup_Status_Date__c</fullName>
        <label>GEMS Account Setup Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Setup_Status__c</fullName>
        <label>GEMS Account Setup Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Structure_Status_Date__c</fullName>
        <label>GEMS Account Structure Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Structure_Status__c</fullName>
        <label>GEMS Account Structure Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Submission_Status_Date__c</fullName>
        <label>GEMS Account Submission Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Account_Submission_Status__c</fullName>
        <label>GEMS Account Submission Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Additional_Underwriting_Status_Date__c</fullName>
        <label>GEMS Additional Underwriting Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Additional_Underwriting_Status__c</fullName>
        <label>GEMS Additional Underwriting Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Dental_Benefit_Coding_Status_Date__c</fullName>
        <label>GEMS Dental Benefit Coding Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Dental_Benefit_Coding_Status__c</fullName>
        <label>GEMS Dental Benefit Coding Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Dental_Underwriting_Status_Date__c</fullName>
        <label>GEMS Dental Underwriting Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Dental_Underwriting_Status__c</fullName>
        <label>GEMS Dental Underwriting Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Eligibility_Status_Date__c</fullName>
        <label>GEMS Eligibility Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Eligibility_Status__c</fullName>
        <label>GEMS Eligibility Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_ID_Card_Mailed_Date__c</fullName>
        <label>GEMS ID Card Mailed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_ID_Card_Status_Date__c</fullName>
        <label>GEMS ID Card Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_ID_Card_Status__c</fullName>
        <label>GEMS ID Card Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Manual_Eligibility_Status_Date__c</fullName>
        <label>GEMS Manual Eligibility Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Manual_Eligibility_Status__c</fullName>
        <label>GEMS Manual Eligibility Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Medical_Benefit_Coding_Status_Date__c</fullName>
        <label>GEMS Medical Benefit Coding Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Medical_Benefit_Coding_Status__c</fullName>
        <label>GEMS Medical Benefit Coding Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Medical_Underwriting_Status_Date__c</fullName>
        <label>GEMS Medical Underwriting Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Medical_Underwriting_Status__c</fullName>
        <label>GEMS Medical Underwriting Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Membership_Status_Date__c</fullName>
        <label>GEMS Membership Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Membership_Status__c</fullName>
        <label>GEMS Membership Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Pharmacy_Coding_Status_Date__c</fullName>
        <label>GEMS Pharmacy Coding Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEMS_Pharmacy_Coding_Status__c</fullName>
        <label>GEMS Pharmacy Coding Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Date__c</fullName>
        <label>Milestone Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone_Member_Ready_Date__c</fullName>
        <label>Milestone - Member Ready Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone_Member_Ready_ID_Cards_Mailed__c</fullName>
        <label>Milestone - Member Ready ID Cards Mailed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone_Service_Ready_Date__c</fullName>
        <label>Milestone - Service Ready Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Ready</fullName>
                </value>
                <value>
                    <fullName>Member Ready + ID Cards Mailed</fullName>
                </value>
                <value>
                    <fullName>Service Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Submission_Case__r.GEMS_StdCust_Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Case_Number__c</fullName>
        <formula>Submission_Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Case__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Submission Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>GEMS ReportingMilestone Trackings</relationshipLabel>
        <relationshipName>GEMS_ReportingMilestone_Trackings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Sub_Type__c</fullName>
        <formula>IF ( INCLUDES ( Submission_Case__r.GEMS_Submission_Sub_Type__c , &quot;Account Structure Change&quot; ), &quot;Account Structure Change; &quot;,null ) &amp; 
IF ( INCLUDES ( Submission_Case__r.GEMS_Submission_Sub_Type__c , &quot;Funding Change&quot; ), &quot;Funding Change; &quot;,null ) &amp; 
IF ( INCLUDES ( Submission_Case__r.GEMS_Submission_Sub_Type__c , &quot;No Changes&quot; ), &quot;No Changes; &quot;,null ) &amp; 
IF ( INCLUDES ( Submission_Case__r.GEMS_Submission_Sub_Type__c , &quot;Benefit Change&quot; ), &quot;Benefit Change; &quot;,null ) &amp; 
IF ( INCLUDES ( Submission_Case__r.GEMS_Submission_Sub_Type__c , &quot;Eligibility Change&quot; ), &quot;Eligibility Change; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Type__c</fullName>
        <formula>TEXT(Submission_Case__r.GEMS_Submission_Type__c)</formula>
        <label>Submission Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasDental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasDental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasMedical__c</fullName>
        <defaultValue>true</defaultValue>
        <label>hasMedical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasRx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasRx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hasTeamAdditionalUWer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasTeamAdditionalUWer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isReleased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReleased</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS ReportingMilestone Tracking</label>
    <nameField>
        <label>GEMS ReportingMilestone Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS ReportingMilestone Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>